Replace old deprecated use of Long, Double and Integer constructors with valueOf() (they were annoying me)